--- a/Streamlink_Recorder.ipynb
+++ b/Streamlink_Recorder.ipynb
@@ -118,7 +118,7 @@
         "\n",
         "#@markdown ---\n",
         "#@markdown ####Type stream url\n",
-        "streamURL =  \"https://www.youtube.com/watch?v=0Cs_o3daYR8\"  # @param {type:\"string\"}\n",
+        "streamURL =  \"https://live.vkplay.ru/funny\"  # @param {type:\"string\"}\n",
         "#@markdown ---\n",
         "#@markdown ####Type any name for the stream\n",
         "name = \"K-POP\"  # @param {type:\"string\"}\n",
@@ -129,7 +129,7 @@
         "#@markdown try restart record after stream disconnect\n",
         "loop = True #@param {type:\"boolean\"}\n",
         "#@markdown upload video file to your Drive after finish every record\n",
-        "upload_record = True #@param {type:\"boolean\"}\n",
+        "upload_record = False #@param {type:\"boolean\"}\n",
         "#@markdown upload all videos in this session to your Drive\n",
         "upload_all = False #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
